--- a/index.html
+++ b/index.html
@@ -1,6 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   <title>fiction</title>
+  <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
 </head>
+
+<body>
+
+    <!-- header -->
+
+    <div class="header">
+
+      <div class="logo">
+      <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myt-logo.jpg">
+      </div>
+
+      <div class="title"
+      <h1>My Times</h1>
+      </div>
+
+      <nav class="navigation">
+        <ul>
+          <li><a href="#World">World</a></li>
+          <li><a href="#U.S.">U.S.</a></li>
+          <li><a href="#Tech">Tech</a></li>
+          <li><a href="#Science">Science</a></li>
+        </ul>
+      </nav>
+
+    </div>
