--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 
     <!-- header -->
 
-    <div class="header">
+
+      <div class="header">
 
       <div class="logo">
       <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myt-logo.jpg">
       </div>
 
-      <div class="title"
+      <div class="headline">
       <h1>My Times</h1>
       </div>
 
@@ -26,6 +27,8 @@
           <li><a href="#Tech">Tech</a></li>
           <li><a href="#Science">Science</a></li>
         </ul>
-      </nav>
+        </nav>
 
-    </div>
+     </div>
+</body>
+</html>
