--- a/index.html
+++ b/index.html
@@ -9,18 +9,16 @@
 
     <!-- header -->
 
+      <div class ="project">
+        <div class ="header">
+        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myt-logo.jpg">
+        </div>
 
-      <div class="header">
+        <div class="one">
+        <h1>My Times</h1>
+        </div>
 
-      <div class="logo">
-      <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myt-logo.jpg">
-      </div>
-
-      <div class="headline">
-      <h1>My Times</h1>
-      </div>
-
-      <nav class="navigation">
+        <nav class="navigation">
         <ul>
           <li><a href="#World">World</a></li>
           <li><a href="#U.S.">U.S.</a></li>
@@ -28,7 +26,30 @@
           <li><a href="#Science">Science</a></li>
         </ul>
         </nav>
+    </div>
+    <!-- header end -->
 
-     </div>
+    <!--Main-->
+    <div class="column-layout">
+      <div class="main-column">
+        <h1>Main Column<h1>
+          <p>hello</p>
+        </div>
+
+        <div class="sidebar-one">
+        <h2>Side bar one</h2>
+          <p>hello</p>
+        </div>
+
+        <div class="sidebar-two">
+        <h3>Side bar two</h3>
+          <p>hello</p>
+        </div>
+
+
+
+
+
+
 </body>
 </html>
